--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -4,16 +4,16 @@ backend:
   branch: master
   ### enable below lines for github integration ###
   # name: github
-  # repo: surjithctly/neat-starter
+  # repo: your-github-repo
 media_folder: "src/static/img"
 public_folder: "/static/img"
 
 # Please run "npx netlify-cms-proxy-server" for local backend
 local_backend: true
-# publish_mode: editorial_workflow
 
+# Collections for CMS
 collections:
-  # Blog Posts
+  # Blog Posts Collection
   - label: "Blog"
     name: "blog"
     folder: "src/posts"
@@ -33,7 +33,7 @@ collections:
         create: true
         options: ["Tags", "created", "from", "config.yml"]
 
-  # Pages
+  # Pages Collection
   - label: "Pages"
     name: "pages"
     folder: "src/pages"
@@ -45,7 +45,7 @@ collections:
       - { label: "Body", name: "body", widget: "markdown" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
 
-  # Products
+  # Products Collection
   - label: "Products"
     name: "products"
     folder: "src/products"
@@ -58,8 +58,9 @@ collections:
       - { label: "Price", name: "price", widget: "number" }
       - { label: "Product Image", name: "image", widget: "image" }
       - { label: "Tags", name: "tags", widget: "list", default: [] }
+      - { label: "Body", name: "body", widget: "markdown" }
 
-  # Patterns (PDF downloads)
+  # Patterns Collection (PDF Downloads)
   - label: "Patterns"
     name: "patterns"
     folder: "src/patterns"
@@ -72,7 +73,7 @@ collections:
       - { label: "PDF File", name: "file", widget: "file", media_library: { allow_multiple: false, config: { media_type: 'application/pdf' } } }
       - { label: "Tags", name: "tags", widget: "list", default: [] }
 
-  # Settings
+  # Settings Collection for Navigation, Quick Links, Meta Settings
   - label: "Settings"
     name: "settings"
     editor:
@@ -82,30 +83,30 @@ collections:
         name: "items"
         file: "src/_data/navigation.yaml"
         fields:
-          - label: Nav Items
-            name: items
+          - label: "Nav Items"
+            name: "items"
             widget: list
             allow_add: false
             collapsed: false
             fields:
-              - { label: Title, name: text, widget: string }
-              - { label: URL, name: url, widget: string }
+              - { label: "Title", name: "text", widget: "string" }
+              - { label: "URL", name: "url", widget: "string" }
       - label: "Quick Links"
         name: "links"
         file: "src/_data/quicklinks.yaml"
         fields:
-          - label: Nav Items
-            name: links
+          - label: "Nav Items"
+            name: "links"
             widget: list
             collapsed: false
             fields:
-              - { label: Title, name: title, widget: string }
-              - { label: URL, name: url, widget: string }
-              - { label: Description, name: desc, widget: string }
+              - { label: "Title", name: "title", widget: "string" }
+              - { label: "URL", name: "url", widget: "string" }
+              - { label: "Description", name: "desc", widget: "string" }
       - label: "Meta Settings"
         name: "settings"
         file: "src/_data/settings.yaml"
         fields:
-          - { label: Name, name: name, widget: string }
-          - { label: Author, name: author, widget: string }
-          - { label: URL, name: url, widget: string }
+          - { label: "Name", name: "name", widget: "string" }
+          - { label: "Author", name: "author", widget: "string" }
+          - { label: "URL", name: "url", widget: "string" }
